# Kursovaya6_django

./: .gitignore  README.md  pyproject.toml
django_kursovaya/: .env.example
django_kursovaya/blog/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
django_kursovaya/blog/migrations/: 0001_initial.py
django_kursovaya/blog/templatetags/: __init__.py
django_kursovaya/config/: celery.py  settings.py  urls.py
django_kursovaya/core/: views.py
django_kursovaya/mailing_service/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
django_kursovaya/mailing_service/migrations/: 0001_initial.py  0002_client_is_active.py
django_kursovaya/mailings/: admin.py  apps.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
django_kursovaya/mailings/migrations/: 0001_initial.py  0002_alter_client_id_alter_mailingattempt_id_and_more.py  0002_alter_mailing_periodicity.py  0003_alter_mailingsettings_clients.py  0003_mailing_owner.py  0004_alter_mailing_owner.py  0005_client_is_active.py
django_kursovaya/static/css/: bootstrap.min.css
django_kursovaya/static/js/: bootstrap.bundle.min.js
django_kursovaya/templates/: admin_dashboard.html  admin_user_list.html  base.html  base_generic.html  client_dashboard.html  home.html  mailing_form.html  mailing_list.html  manager_dashboard.html  report_list.html
django_kursovaya/templates/account/: login.html  logout.html  password_reset.html  signup.html
django_kursovaya/users/: admin.py  forms.py  models.py  permissions.py  signals.py  urls.py  views.py
(+43 files in other folders)
